# tatatele_collection_call_bot_pipecat_plivo_backend

./: .gitignore  main.py  pyproject.toml
helpers/: bot.py  db.py  supabase_push.py  ultravox_api.py  ultravox_prompts.py  ultravox_setup.py
routers/: server.py
